--- a/app/views/index.html
+++ b/app/views/index.html
@@ -17,7 +17,7 @@
       <!-- endbower -->
       <!-- endbuild -->
       <!-- build:css({.tmp,app}) styles/main.css -->
-      <link rel="stylesheet" href="styles/main.css">
+      <link rel="stylesheet" href="styles/style.css">
       <!-- endbuild -->
   </head>
   <body ng-app="tasksApp">
@@ -29,7 +29,7 @@
 
 
     <!-- Add your site or application content here -->
-    <div class="container" ui-view></div>
+    <div id="main" class="container-fluid" ui-view></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
@@ -62,6 +62,7 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/controllers/mainMenu.js"></script>
         <script src="scripts/controllers/navbar.js"></script>
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/controllers/signup.js"></script>
@@ -70,6 +71,7 @@
         <script src="scripts/services/session.js"></script>
         <script src="scripts/services/user.js"></script>
         <script src="scripts/directives/mongooseError.js"></script>
+    <script src="scripts/directives/menu.js"></script>
         <!-- endbuild -->
-</body>
+  </body>
 </html>
