--- a/app/views/partials/navbar.html
+++ b/app/views/partials/navbar.html
@@ -1,32 +1,41 @@
-<div class="header navbar navbar-inverse navbar-fixed-top" role="navigation" ng-controller="NavbarCtrl">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Tasks</a>
-        </div>
 
-        <div  class="navbar-collapse collapse pull-right">
-            <ul class="nav nav-pills pull-right " >
-                <li ng-repeat="item in menu" ng-class="{active: $state.includes(item.link)}" ng-show="currentUser">
-                    <a ng-href="{{item.link}}">{{item.title}}</a>
-                </li>
-                <li ng-show="currentUser" ng-class="{active:  $state.includes('logout')}"><a href="" ng-click="logout()">Logout</a></li>
-                <li ng-hide="currentUser" ng-class="{active: $state.includes('signup')}"><a href="/signup">Sign up</a></li>
-            </ul>
-            <form  name="loginform" ng-hide="currentUser"  class="navbar-form navbar-right" role="form" ng-submit="login(loginform)" novalidate>
-                <div class="form-group">
-                    <input type="email" placeholder="Email" class="form-control" ng-model="user.email">
+
+
+<header class="header navbar navbar-inverse navbar-fixed-top" role="navigation" ng-controller="NavbarCtrl">
+    <div class="container-fluid expanded-panel">
+        <div class="row">
+            <div id="logo" class="col-xs-12 col-sm-2">
+                <a href="index.html">TASKS</a>
+            </div>
+            <div id="top-panel" class="col-xs-12 col-sm-10">
+                <div class="row">
+                    <div class="col-xs-8 col-sm-4">
+                        <a href="#"><span class="glyphicon glyphicon glyphicon-th-list"></span></a>
+                    </div>
+                    <div class="col-xs-4 col-sm-8 top-panel-right">
+                        <div  class="navbar-collapse collapse pull-right">
+                        <ul class="nav navbar-nav pull-right panel-menu" >
+                            <li ng-repeat="item in menu" ng-class="{active: $state.includes(item.link)}" ng-show="currentUser">
+                                <a ng-href="{{item.link}}">{{item.title}}</a>
+                            </li>
+                            <li ng-show="currentUser" ng-class="{active:  $state.includes('logout')}"><a href="" ng-click="logout()">Logout</a></li>
+                            <li ng-hide="currentUser" ng-class="{active: $state.includes('signup')}"><a href="/signup">Sign up</a></li>
+                        </ul>
+                            <form  name="loginform" ng-hide="currentUser"  class="navbar-form navbar-right" role="form" ng-submit="login(loginform)" novalidate>
+                                <div class="form-group">
+                                    <input type="email" placeholder="Email" class="form-control" ng-model="user.email">
+                                </div>
+                                <div class="form-group">
+                                    <input type="password" placeholder="Password" class="form-control" ng-model="user.password">
+                                </div>
+                                <div class="form-group">
+                                    <button type="submit" class="btn btn-success">Sign in</button>
+                                </div>
+                        </form>
+                        </div><!--/.navbar-collapse -->
+                    </div>
                 </div>
-                <div class="form-group">
-                    <input type="password" placeholder="Password" class="form-control" ng-model="user.password">
-                </div>
-                <button type="submit" class="btn btn-success">Sign in</button>
-            </form>
-        </div><!--/.navbar-collapse -->
+            </div>
+        </div>
     </div>
-</div>
+</header>
