--- a/app/views/index.html
+++ b/app/views/index.html
@@ -17,7 +17,8 @@
       <!-- endbower -->
       <!-- endbuild -->
       <!-- build:css({.tmp,app}) styles/main.css -->
-      <link rel="stylesheet" href="styles/style.css">
+      <!--<link rel="stylesheet" href="styles/style.css">-->
+      <link rel="stylesheet" href="styles/main.css">
       <!-- endbuild -->
   </head>
   <body ng-app="tasksApp">
@@ -25,11 +26,13 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div ng-include="'partials/navbar'" class="container" ></div>
-
+    <div ui-view="header"></div>
 
     <!-- Add your site or application content here -->
-    <div id="main" class="container-fluid" ui-view></div>
+    <div id="main" class="container-fluid" ui-view="container"></div>
+
+    <div ui-view="footer"></div>
+
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
