--- a/app/views/index.html
+++ b/app/views/index.html
@@ -64,12 +64,15 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
+    <script src="scripts/routers.js"></script>
         <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/mainMenu.js"></script>
         <script src="scripts/controllers/navbar.js"></script>
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/controllers/signup.js"></script>
         <script src="scripts/controllers/settings.js"></script>
+    <script src="scripts/controllers/workspace.js"></script>
+    <script src="scripts/services/localStorage.js"></script>
         <script src="scripts/services/auth.js"></script>
         <script src="scripts/services/session.js"></script>
         <script src="scripts/services/user.js"></script>
