--- a/app/views/partials/workspace.html
+++ b/app/views/partials/workspace.html
@@ -1,4 +1,7 @@
-<div class="row" ng-controller="MainMenuCtrl">
+<div class="row" >
+    menu bar
+</div>
+<div class="row" >
     <div id="sidebar-left" class="col-xs-2 col-sm-2">
         <navigation menu="menu"></navigation>
     </div>
