--- a/app/views/index.html
+++ b/app/views/index.html
@@ -72,6 +72,9 @@
         <script src="scripts/controllers/signup.js"></script>
         <script src="scripts/controllers/settings.js"></script>
     <script src="scripts/controllers/workspace.js"></script>
+    <script src="scripts/controllers/workspace/main.js"></script>
+    <script src="scripts/controllers/workspace/list.js"></script>
+    <script src="scripts/controllers/workspace/menu.js"></script>
     <script src="scripts/services/localStorage.js"></script>
         <script src="scripts/services/auth.js"></script>
         <script src="scripts/services/session.js"></script>
