--- a/app/views/partials/navbar.html
+++ b/app/views/partials/navbar.html
@@ -10,6 +10,10 @@
             <a class="navbar-brand"  href="index.html">TASKS</a>
         </div>
         <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li><a ui-sref="root.main">Home</a></li>
+                <li><a ui-sref="root.login">Login</a></li>
+            </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li ng-repeat="item in menu"><a ng-show="isLoggedIn()" ui-sref="{{item.link}}">{{item.title}}</a></li>
                 <li><a ng-show="isLoggedIn()" href="" ng-click="logout()">Logout</a></li>
