--- a/app/views/partials/workspace.html
+++ b/app/views/partials/workspace.html
@@ -1,16 +1,15 @@
 <div class="row" >
-    menu bar
+    <div ui-view="menu"></div>
 </div>
 <div class="row" >
     <div id="sidebar-left" class="col-xs-2 col-sm-2">
-        <navigation menu="menu"></navigation>
+        <div ui-view="list"></div>
     </div>
-    <!--Start Content-->
     <div id="content" class="col-xs-12 col-sm-10">
-        <div class="preloader">
-            <img src="images/dashboard.JPG" class="devoops-getdata" alt="preloader"/>
-        </div>
-        <div id="ajax-content"></div>
+        <div ui-view="main"></div>
     </div>
-    <!--End Content-->
 </div>
+
+
+
+<!--<div ui-view></div>-->
