adjust workspace page.

--- a/app/views/partials/workspace.html
+++ b/app/views/partials/workspace.html
@@ -1,5 +1,9 @@
 <div class="row" >
-    <div ui-view="menu"></div>
+    <div class="col-xs-2 col-sm-2">
+    </div>
+    <div class="col-xs-12 col-sm-10">
+        <div ui-view="menu"></div>
+    </div>
 </div>
 <div class="row" >
     <div id="sidebar-left" class="col-xs-2 col-sm-2">
