--- a/app/views/partials/workspace.html
+++ b/app/views/partials/workspace.html
@@ -10,7 +10,7 @@
         <div ui-view="list"></div>
     </div>
     <div id="content" class="col-xs-12 col-sm-10">
-        <div ui-view="main"></div>
+        <div ui-view></div>
     </div>
 </div>
 
