--- a/app/views/index.html
+++ b/app/views/index.html
@@ -14,7 +14,7 @@
       <!-- build:css(app) styles/vendor.css -->
       <!-- bower:css -->
       <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-      <!-- endbower -->
+      <link rel="stylesheet" href="styles/treeview.css">      <!-- endbower -->
       <!-- endbuild -->
       <!-- build:css({.tmp,app}) styles/main.css -->
       <!--<link rel="stylesheet" href="styles/style.css">-->
@@ -59,10 +59,12 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script type="text/javascript" src="bower_components/angular-ui-tree/dist/angular-ui-tree.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <script src="scripts/angular.treeview.js"></script>
         <script src="scripts/app.js"></script>
     <script src="scripts/routers.js"></script>
         <script src="scripts/controllers/main.js"></script>
@@ -74,7 +76,7 @@
     <script src="scripts/controllers/workspace.js"></script>
     <script src="scripts/controllers/workspace/routers.js"></script>
     <script src="scripts/controllers/workspace/main.js"></script>
-    <script src="scripts/controllers/workspace/main.item.js"></script>
+    <script src="scripts/controllers/workspace/item.js"></script>
     <script src="scripts/controllers/workspace/list.js"></script>
     <script src="scripts/controllers/workspace/menu.js"></script>
     <script src="scripts/services/localStorage.js"></script>
