--- a/app/views/partials/main.html
+++ b/app/views/partials/main.html
@@ -1,10 +1,23 @@
-<div class="row">
-<div class="jumbotron">
-    <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
+<div class="row" ng-if="!isLoggedIn()">
+    <div class="jumbotron">
+        <div class="container">
+            <h1>Hello, world!</h1>
+            <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+            <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
+        </div>
     </div>
 </div>
+
+
+<div class="row"  ng-if="isLoggedIn()">
+    <div id="sidebar-left" class="col-xs-2 col-sm-2">
+        <div><a ui-sref="user.index">index</a> </div>
+        <div ui-view="list"></div>
     </div>
+    <div id="content" class="col-xs-12 col-sm-10">
+        <div ui-view="main"></div>
+    </div>
+</div>
+
+
 
