--- a/app/views/partials/navbar.html
+++ b/app/views/partials/navbar.html
@@ -9,17 +9,15 @@
             </button>
             <a class="navbar-brand"  href="index.html">TASKS</a>
         </div>
-        <div class="navbar-collapse collapse">
+        <div class="navbar-collapse collapse" ng-if="!isLoggedIn()">
             <ul class="nav navbar-nav">
                 <li><a ui-sref="root.main">Home</a></li>
                 <li><a ui-sref="root.login">Login</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li ng-repeat="item in menu"><a ng-show="isLoggedIn()" ui-sref="{{item.link}}">{{item.title}}</a></li>
-                <li><a ng-show="isLoggedIn()" href="" ng-click="logout()">Logout</a></li>
-                <li><a ng-hide="isLoggedIn()" ui-sref="root.signup">Sign up</a></li>
+                <li><a ui-sref="root.signup">Sign up</a></li>
             </ul>
-            <form class="navbar-form navbar-right" role="form" name="loginform" ng-hide="isLoggedIn()" ng-submit="login(loginform)">
+            <form class="navbar-form navbar-right" role="form" name="loginform" ng-submit="login(loginform)">
                 <div class="form-group">
                     <input type="text" ng-model="user.email" placeholder="Email" class="form-control">
                 </div>
@@ -28,6 +26,15 @@
                 </div>
                 <button type="submit" class="btn btn-success">Sign in</button>
             </form>
+        </div><!--/.navbar-collapse -->
+        <div class="navbar-collapse collapse" ng-if="isLoggedIn()">
+            <ul class="nav navbar-nav">
+                <li><a ui-sref="root.main">Home</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="" ng-click="logout()">Logout</a></li>
+            </ul>
+
         </div><!--/.navbar-collapse -->
     </div>
 </div>
