--- a/app/views/index.html
+++ b/app/views/index.html
@@ -14,11 +14,14 @@
       <!-- build:css(app) styles/vendor.css -->
       <!-- bower:css -->
       <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-      <link rel="stylesheet" href="styles/treeview.css">      <!-- endbower -->
+      <!--<link rel="stylesheet" href="styles/treeview.css">-->
+      <!-- endbower -->
       <!-- endbuild -->
       <!-- build:css({.tmp,app}) styles/main.css -->
       <!--<link rel="stylesheet" href="styles/style.css">-->
-      <link rel="stylesheet" href="styles/main.css">
+      <link rel="stylesheet" href="styles/main.css"/>
+      <link rel="stylesheet" href="styles/tree-control.css"/>
+      <link rel="stylesheet" href="styles/tree-control-attribute.css"/>
       <!-- endbuild -->
   </head>
   <body>
@@ -59,12 +62,12 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-    <script type="text/javascript" src="bower_components/angular-ui-tree/dist/angular-ui-tree.js"></script>
+    <!--<script type="text/javascript" src="bower_components/angular-ui-tree/dist/angular-ui-tree.js"></script>-->
     <!-- endbower -->
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
-    <script src="scripts/angular.treeview.js"></script>
+    <script src="scripts/angular-tree-control.js"></script>
         <script src="scripts/app.js"></script>
     <script src="scripts/routers.js"></script>
         <script src="scripts/controllers/main.js"></script>
