--- a/app/views/partials/workspace/list.html
+++ b/app/views/partials/workspace/list.html
@@ -1,37 +1,10 @@
 <div class="button_panel">
-    <input type="button" value="EDIT NODE" data-ng-click="mode = 'editNode'" data-ng-disabled="!mytree.currentNode" /> <input type="button" value="ADD CHILD" data-ng-click="mode = 'addChild'" data-ng-disabled="!mytree.currentNode" />
-
-    <div class="input_panel" data-ng-show="mode == 'editNode'">
-        <h4>Selected Node</h4>
-        <label>ID</label> <input data-ng-model="mytree.currentNode.id" disabled/><br />
-        <label>Label</label> <input data-ng-model="mytree.currentNode.label" /><br />
-        <input type="button" value="DONE" class="done_button" data-ng-click="done()">
-    </div>
-
-    <div class="input_panel" data-ng-show="mode == 'addChild'">
-        <h4>New Node</h4>
-        <label>ID</label> <input data-ng-model="temporaryNode.id" /><br />
-        <label>Label</label> <input data-ng-model="temporaryNode.label" /><br />
-        <input type="button" value="DONE" class="done_button" data-ng-click="addChildDone()">
-    </div>
+    <input type="button" value="ADD NODE" data-ng-click="addRoot()"  />
+    <input type="button" value="APPEND NODE" data-ng-click="addChild()"  />
 </div>
 
-<div style="margin:10px 0 30px 0; padding:10px; background-color:#EEEEEE; border-radius:5px; font:12px Tahoma;">
-    <span><b>Selected Node</b> : {{mytree.currentNode.label}}</span>
-</div>
-
-<!--
-  [TREE attribute]
-  angular-treeview: the treeview directive
-  tree-id : each tree's unique id.
-  tree-model : the tree model on $scope.
-  node-id : each node's id
-  node-label : each node's label
-  node-children: each node's children
--->
-<div
-        data-angular-treeview="true"
-        data-tree-id="mytree"
-        data-tree-model="roleList">
-</div>
-
+<h3>Classic Tree</h3>
+<div>Selected: {{node1.label?node1.label:"N/A"}}</div>
+<treecontrol class="tree-classic" tree-model="treedata" node-children="children" on-selection="showSelected(node)" selected-node="node1">
+    label: {{node.label}} ({{node.id}})
+</treecontrol>
