add another tree nav.

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -21,7 +21,8 @@
       <!--<link rel="stylesheet" href="styles/style.css">-->
       <link rel="stylesheet" href="styles/main.css"/>
       <link rel="stylesheet" href="styles/tree-control.css"/>
-      <link rel="stylesheet" href="styles/tree-control-attribute.css"/>
+      <!--<link rel="stylesheet" href="styles/tree-control-attribute.css"/>-->
+      <link rel="stylesheet" href="styles/abn_tree.css"/>
       <!-- endbuild -->
   </head>
   <body>
@@ -67,7 +68,8 @@
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
-    <script src="scripts/angular-tree-control.js"></script>
+    <!--<script src="scripts/angular-tree-control.js"></script>-->
+    <script src="scripts/directives/abn_tree_directive.js"></script>
         <script src="scripts/app.js"></script>
     <script src="scripts/routers.js"></script>
         <script src="scripts/controllers/main.js"></script>
