--- a/app/views/partials/workspace/list.html
+++ b/app/views/partials/workspace/list.html
@@ -3,8 +3,55 @@
     <input type="button" value="APPEND NODE" data-ng-click="addChild()"  />
 </div>
 
-<h3>Classic Tree</h3>
-<div>Selected: {{node1.label?node1.label:"N/A"}}</div>
-<treecontrol class="tree-classic" tree-model="treedata" node-children="children" on-selection="showSelected(node)" selected-node="node1">
-    label: {{node.label}} ({{node.id}})
-</treecontrol>
+<!--<h3>Classic Tree</h3>-->
+<!--<div>Selected: {{node1.label?node1.label:"N/A"}}</div>-->
+<!--<treecontrol class="tree-classic" tree-model="treedata" node-children="children" on-selection="showSelected(node)" selected-node="node1">-->
+    <!--label: {{node.label}} ({{node.id}})-->
+<!--</treecontrol>-->
+
+
+
+<abn-tree tree-data="my_data" tree-control="my_tree" on-select="my_tree_handler(branch)" expand-level="2" initial-selection="Granny Smith"></abn-tree>
+
+
+<div class="panel">
+    <div class="panel-body">
+        <table>
+            <tr>
+                <td style="vertical-align:top">
+                    <br>
+                    <button ng-click="try_changing_the_tree_data()" class="btn btn-default btn-sm">Change The Tree Definition</button>
+                    <br>
+                    <button ng-click="try_async_load()" class="btn btn-default btn-sm">Load Tree Data Asynchronously</button>
+                    <hr>
+                    <h5>Test the Tree Control API:</h5>
+                    <br>
+                    <button ng-click="my_tree.select_first_branch()" class="btn btn-default btn-sm">First Branch</button>
+                    <br>
+                    <button ng-click="my_tree.select_next_sibling()" class="btn btn-default btn-sm">Next Sibling</button>
+                    <button ng-click="my_tree.select_prev_sibling()" class="btn btn-default btn-sm">Prev Sibling</button>
+                    <br>
+                    <button ng-click="my_tree.select_next_branch()" class="btn btn-default btn-sm">Next Branch</button>
+                    <button ng-click="my_tree.select_prev_branch()" class="btn btn-default btn-sm">Prev Branch</button>
+                    <br>
+                    <button ng-click="my_tree.select_parent_branch()" class="btn btn-default btn-sm">Parent</button>
+                    <hr>
+                    <button ng-click="my_tree.expand_branch()" class="btn btn-default btn-sm">Expand</button>
+                    <button ng-click="my_tree.collapse_branch()" class="btn btn-default btn-sm">Collapse</button>
+                    <br>
+                    <button ng-click="my_tree.expand_all()" class="btn btn-default btn-sm">Expand All</button>
+                    <button ng-click="my_tree.collapse_all()" class="btn btn-default btn-sm">Collapse All</button>
+                    <hr>
+                    <button ng-click="try_adding_a_branch()" class="btn btn-default btn-sm">Add Branch</button>
+                    <button ng-click="add_project()" class="btn btn-default btn-sm">Add Project</button>
+                </td>
+                <tr>
+                <td >
+                    <div style="width:300px" class="alert alert-warning">{{ output }}</div>
+                </td>
+            </tr>
+            </tr>
+        </table>
+
+    </div>
+</div>
