--- a/app/views/index.html
+++ b/app/views/index.html
@@ -14,6 +14,7 @@
       <!-- build:css(app) styles/vendor.css -->
       <!-- bower:css -->
       <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+      <link rel="stylesheet" href="bower_components/nsPopover/example/nsPopover.css" />
       <!--<link rel="stylesheet" href="styles/treeview.css">-->
       <!-- endbower -->
       <!-- endbuild -->
@@ -30,12 +31,14 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div ui-view="header"></div>
+    <!--<div ui-view="header"></div>-->
+    <div ng-include="'partials/navbar.html'" ng-controller="NavbarCtrl"></div>
 
     <!-- Add your site or application content here -->
-    <div id="main" class="container-fluid" ui-view="container"></div>
+    <div id="main" class="container-fluid" ui-view></div>
 
-    <div ui-view="footer"></div>
+    <!--<div ui-view="footer"></div>-->
+    <div ng-include="'partials/footer.html'"></div>
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
@@ -63,6 +66,7 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="bower_components/nsPopover/src/nsPopover.js"></script>
     <!--<script type="text/javascript" src="bower_components/angular-ui-tree/dist/angular-ui-tree.js"></script>-->
     <!-- endbower -->
     <!-- endbuild -->
@@ -73,14 +77,13 @@
         <script src="scripts/app.js"></script>
     <script src="scripts/routers.js"></script>
         <script src="scripts/controllers/main.js"></script>
-    <script src="scripts/controllers/mainMenu.js"></script>
         <script src="scripts/controllers/navbar.js"></script>
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/controllers/signup.js"></script>
         <script src="scripts/controllers/settings.js"></script>
     <script src="scripts/controllers/workspace.js"></script>
     <script src="scripts/controllers/workspace/routers.js"></script>
-    <script src="scripts/controllers/workspace/main.js"></script>
+    <script src="scripts/controllers/workspace/new.js"></script>
     <script src="scripts/controllers/workspace/item.js"></script>
     <script src="scripts/controllers/workspace/list.js"></script>
     <script src="scripts/controllers/workspace/menu.js"></script>
@@ -89,6 +92,7 @@
         <script src="scripts/services/session.js"></script>
         <script src="scripts/services/user.js"></script>
     <script src="scripts/services/workspace.js"></script>
+    <script src="scripts/services/helpers.js"></script>
         <script src="scripts/directives/mongooseError.js"></script>
     <script src="scripts/directives/menu.js"></script>
         <!-- endbuild -->
