--- a/app/views/partials/navbar.html
+++ b/app/views/partials/navbar.html
@@ -15,7 +15,7 @@
                 <li><a ui-sref="root.login">Login</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a ui-sref="root.signup">Sign up</a></li>
+                <li><a ui-sref="signup">Sign up</a></li>
             </ul>
             <form class="navbar-form navbar-right" role="form" name="loginform" ng-submit="login(loginform)">
                 <div class="form-group">
@@ -29,7 +29,7 @@
         </div><!--/.navbar-collapse -->
         <div class="navbar-collapse collapse" ng-if="isLoggedIn()">
             <ul class="nav navbar-nav">
-                <li><a ui-sref="root.main">Home</a></li>
+                <li><a ui-sref="main">Home</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="" ng-click="logout()">Logout</a></li>
