--- a/app/views/partials/workspace.html
+++ b/app/views/partials/workspace.html
@@ -1,16 +1,15 @@
+
 <div class="row" >
-    <div class="col-xs-2 col-sm-2">
-    </div>
-    <div class="col-xs-12 col-sm-10">
-        <div ui-view="menu"></div>
-    </div>
-</div>
-<div class="row" >
+
     <div id="sidebar-left" class="col-xs-2 col-sm-2">
-        <div ui-view="list"></div>
+        <div ng-include="'partials/workspace/list.html'" ng-controller="WorkspaceListCtrl"></div>
     </div>
     <div id="content" class="col-xs-12 col-sm-10">
-        <div ui-view="main"></div>
+        <div ui-view>
+            <div class="preloader">
+                <img src="images/dashboard.JPG" class="devoops-getdata" alt="preloader"/>
+            </div>
+        </div>
     </div>
 </div>
 
