--- a/app/views/index.html
+++ b/app/views/index.html
@@ -66,6 +66,8 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/nsPopover/src/nsPopover.js"></script>
     <!--<script type="text/javascript" src="bower_components/angular-ui-tree/dist/angular-ui-tree.js"></script>-->
     <!-- endbower -->
