--- a/app/views/partials/workspace/list.html
+++ b/app/views/partials/workspace/list.html
@@ -3,17 +3,38 @@
     <a href="#" class="list-group-item">+Create New Project</a>
 </div>
 
-<ul class="list-unstyled">
-    <li>Home</li>
-    <li>Products
-        <ul>
-            <li>Gadgets</li>
-            <li>Accessories</li>
-        </ul>
-    </li>
-    <li>About Us</li>
-    <li>Contact</li>
-</ul>
+<accordion close-others="true">
+    <accordion-group heading="Project 1" >
+        <accordion close-others="true">
+            <accordion-group heading="Data Sets">
+            </accordion-group>
+        </accordion>
+        <accordion close-others="true">
+            <accordion-group heading="Tools">
+            </accordion-group>
+        </accordion>
+        <accordion close-others="true">
+            <accordion-group heading="Model 1">
+                This content is straight in the template.
+            </accordion-group>
+        </accordion>
+        <accordion close-others="true">
+            <accordion-group heading="Model 2">
+                This content is straight in the template.
+            </accordion-group>
+        </accordion>
+
+
+    </accordion-group>
+    <accordion-group heading="Second Header.">
+        This content is straight in the template.
+    </accordion-group>
+    <accordion-group heading="Third Header.">
+        This content is straight in the template.
+    </accordion-group>
+</accordion>
+
+
 <ul class="list-group">
     <li class="list-group-item">Project 1
         <ul class="list-group">
