--- a/app/views/partials/workspace.html
+++ b/app/views/partials/workspace.html
@@ -6,9 +6,9 @@
     </div>
     <div id="content" class="col-xs-12 col-sm-10">
         <div ui-view>
-            <div class="preloader">
-                <img src="images/dashboard.JPG" class="devoops-getdata" alt="preloader"/>
-            </div>
+            <!--<div class="preloader">-->
+                <!--<img src="images/dashboard.JPG" class="devoops-getdata" alt="preloader"/>-->
+            <!--</div>-->
         </div>
     </div>
 </div>
