--- a/app/views/index.html
+++ b/app/views/index.html
@@ -86,6 +86,8 @@
     <script src="scripts/controllers/workspace.js"></script>
     <script src="scripts/controllers/workspace/routers.js"></script>
     <script src="scripts/controllers/workspace/new.js"></script>
+    <script src="scripts/controllers/workspace/newProject.js"></script>
+    <script src="scripts/controllers/workspace/project.js"></script>
     <script src="scripts/controllers/workspace/item.js"></script>
     <script src="scripts/controllers/workspace/list.js"></script>
     <script src="scripts/controllers/workspace/menu.js"></script>
@@ -97,6 +99,7 @@
     <script src="scripts/services/helpers.js"></script>
         <script src="scripts/directives/mongooseError.js"></script>
     <script src="scripts/directives/menu.js"></script>
+    <script src="scripts/directives/mflowProjects.js"></script>
         <!-- endbuild -->
   </body>
 </html>
