--- a/app/views/partials/project/list.html
+++ b/app/views/partials/project/list.html
@@ -1,5 +1,5 @@
 <div class="mflow_add_project">
-    <a ui-sref="workspace.new" >+Create New Project</a>
+    <a ui-sref="project.new" >+Create New Project</a>
     <!--<span class="input-group-addon">+</span>-->
 </div>
 
