--- a/app/views/partials/project.html
+++ b/app/views/partials/project.html
@@ -2,7 +2,7 @@
 <div class="row" >
 
     <div id="sidebar-left" class="col-xs-2 col-sm-2">
-        <div ng-include="'partials/workspace/list.html'" ng-controller="WorkspaceListCtrl"></div>
+        <div ng-include="'partials/project/list.html'" ng-controller="WorkspaceListCtrl"></div>
     </div>
     <div id="content" class="col-xs-12 col-sm-10">
         <div ui-view>
